--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -7,10 +7,12 @@
     <color name="holo_blue">#ff33b5e5</color>
     <color name="dlg_text_color">#000000</color>
 
-    <color name="gray">#dddddd</color>
-
+    <color name="gray">#aaaaaa</color>
     <color name="green">#00ff00</color>
+    <color name="blue">#ff33b5e5</color>
+    <color name="white">#ffffff</color>
     <color name="yellow">#ffaa00</color>
+    <color name="orange">#FF4500</color>
     <color name="red">#ff0000</color>
 
     <color name="stroke">#000000</color>
