--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,7 @@
         android:layout_height="match_parent"
         android:ellipsize="marquee"
         android:gravity="center"
+        android:background="@color/black"
         android:marqueeRepeatLimit="marquee_forever"
         android:singleLine="true"
         android:text="5S solucoes"
