--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -14,6 +14,7 @@
     <color name="yellow">#ffaa00</color>
     <color name="orange">#FF4500</color>
     <color name="red">#ff0000</color>
+    <color name="black">#000000</color>
 
     <color name="stroke">#000000</color>
 </resources>
