modify the background of item

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,6 +60,7 @@
         android:gravity="center"
         android:marqueeRepeatLimit="marquee_forever"
         android:singleLine="true"
+        android:background="@color/black"
         android:text="5S solucoes"
         android:textColor="@color/content_text_color"
         android:textSize="100dp" />
