--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         android:layout_toRightOf="@id/item_5"
         layout="@layout/layout_item"
         android:visibility="gone" />
-
+<!-- 5S solucoes -->
     <TextView
         android:id="@+id/logo_tv"
         android:layout_width="match_parent"
@@ -61,8 +61,8 @@
         android:background="@color/black"
         android:marqueeRepeatLimit="marquee_forever"
         android:singleLine="true"
-        android:text="5S solucoes"
-        android:textColor="@color/content_text_color"
+        android:text="hexag"
+        android:textColor="@color/green"
         android:textSize="100dp" />
 
 </RelativeLayout>
