--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,7 +92,7 @@
         android:background="@color/black"
         android:marqueeRepeatLimit="marquee_forever"
         android:singleLine="true"
-        android:text="hexag"
+        android:text="TOYOTA"
         android:textColor="@color/green"
         android:textSize="100dp" />
 
