--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,7 +28,7 @@
         <!--是否浮现在activity之上-->
         <item name="android:windowIsTranslucent">false</item>
         <!--半透明-->
-        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowNoTitle">false</item>
         <!--无标题-->
         <item name="android:windowBackground">@color/transparent</item>
         <!--背景透明-->
