--- a/app/src/main/res/layout/layout_line_item.xml
+++ b/app/src/main/res/layout/layout_line_item.xml
@@ -10,6 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:layout_margin="@dimen/layout_item_margin_size"
         layout="@layout/layout_item"/>
 
     <include
@@ -17,6 +18,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:layout_margin="@dimen/layout_item_margin_size"
         layout="@layout/layout_item"/>
 
     <include
@@ -24,6 +26,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:layout_margin="@dimen/layout_item_margin_size"
         layout="@layout/layout_item"/>
 
     <include
@@ -31,6 +34,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:layout_margin="@dimen/layout_item_margin_size"
         layout="@layout/layout_item"/>
 
 </LinearLayout>
