--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,13 +4,15 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="layout_item_margin_size">1dp</dimen>
+
     <dimen name="layout_item_content_text_size">60dp</dimen>
-    <dimen name="layout_item_index_text_size">12dp</dimen>
+    <dimen name="layout_item_index_text_size">8dp</dimen>
 
     <dimen name="layout_item_index_width">16dp</dimen>
     <dimen name="layout_item_index_hight">16dp</dimen>
-    <dimen name="layout_item_index_margin_bottom">10dp</dimen>
-    <dimen name="layout_item_index_margin_right">10dp</dimen>
+    <dimen name="layout_item_index_margin_bottom">6dp</dimen>
+    <dimen name="layout_item_index_margin_right">6dp</dimen>
 
     <dimen name="layout_item_tmp_gap">10dp</dimen>
 
