--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,17 +83,30 @@
         android:visibility="gone" />
 
 <!-- 5S solucoes -->
-    <TextView
-        android:id="@+id/logo_tv"
+    <RelativeLayout
+        android:id="@+id/logo_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:ellipsize="marquee"
-        android:gravity="center"
-        android:background="@color/black"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:singleLine="true"
-        android:text="hexag"
-        android:textColor="@color/green"
-        android:textSize="100dp" />
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/logo_tv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:ellipsize="marquee"
+            android:gravity="center"
+            android:background="@color/black"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:singleLine="true"
+            android:text="hexag"
+            android:textColor="@color/green"
+            android:textSize="100dp" />
+
+        <ImageView
+            android:id="@+id/logo_img"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/black"
+            android:src="@drawable/logo"/>
+    </RelativeLayout>
+
 
 </RelativeLayout>
