--- a/app/src/main/res/layout/activity_main_toyota.xml
+++ b/app/src/main/res/layout/activity_main_toyota.xml
@@ -51,7 +51,7 @@
 
     </LinearLayout>
 
-<!-- 5S solucoes -->
+    <!-- 5S solucoes -->
     <TextView
         android:id="@+id/logo_tv"
         android:layout_width="match_parent"
@@ -68,6 +68,7 @@
     <ScrollView
         android:layout_alignParentEnd="true"
         android:layout_width="280dp"
+        android:visibility="gone"
         android:layout_height="match_parent">
         <TextView
             android:id="@+id/log_tv"
