--- a/app/src/main/res/layout/activity_main_toyota.xml
+++ b/app/src/main/res/layout/activity_main_toyota.xml
@@ -74,6 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/black"
+            android:scaleType="fitXY"
             android:src="@drawable/logo"/>
     </RelativeLayout>
 
