--- a/app/src/main/res/layout/activity_main_toyota.xml
+++ b/app/src/main/res/layout/activity_main_toyota.xml
@@ -80,7 +80,7 @@
     <ScrollView
         android:layout_alignParentEnd="true"
         android:layout_width="280dp"
-        android:visibility="visible"
+        android:visibility="gone"
         android:layout_height="match_parent">
         <TextView
             android:id="@+id/log_tv"
