--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,6 +94,14 @@
         android:singleLine="true"
         android:text="hexag"
         android:textColor="@color/green"
+        android:visibility="gone"
         android:textSize="100dp" />
+
+    <ImageView
+        android:id="@+id/logo_tv_img"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black"
+        android:src="@drawable/logo"/>
 
 </RelativeLayout>
